[gd_scene load_steps=3 format=3 uid="uid://cgt6mr8fqy510"]

[ext_resource type="Script" uid="uid://y72fen3ktd1u" path="res://Scripts/hud.gd" id="1_61fdy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ewvlj"]
bg_color = Color(0, 0, 0, 0.196078)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_61fdy")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ewvlj")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="RegenerateTilemapButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Regenerate Tilemap"

[node name="Spacer1" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="WidthSliderLabels" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WidthSliderTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/WidthSliderLabels"]
layout_mode = 2
text = "Tilemap Width:  "

[node name="WidthSliderTextInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/WidthSliderLabels"]
layout_mode = 2
placeholder_text = "50"
alignment = 1
max_length = 2

[node name="WidthSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 5.0
max_value = 50.0
value = 5.0
rounded = true

[node name="HeightSliderLabels" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HeightSliderTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeightSliderLabels"]
layout_mode = 2
text = "Tilemap Height: "

[node name="HeightSliderTextInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HeightSliderLabels"]
layout_mode = 2
placeholder_text = "50"
alignment = 1
max_length = 2

[node name="HeightSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 5.0
max_value = 50.0
value = 5.0
rounded = true

[node name="Spacer2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="TilemapStatusContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TilemapStatus" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TilemapStatusContainer"]
layout_mode = 2
text = "Tilemap Status:"

[node name="GeneratingLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TilemapStatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Generating"

[node name="CompleteLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TilemapStatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Complete"

[node name="Spacer3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Controls" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Controls:
WASD - Move Camera Forwards/
Back/Left/Right
Q/E - Move Camera Down/Up
Right Click - Press and hold whilst
moving mouse to rotate camera
R - Regenerate Tilemap
T - Teleport camera back to
starting position
Esc - Exit"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/RegenerateTilemapButton" to="." method="_on_regenerate_button_pressed"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/WidthSliderLabels/WidthSliderTextInput" to="." method="_on_width_slider_text_input_text_submitted"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/WidthSlider" to="." method="_on_width_slider_value_changed"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/HeightSliderLabels/HeightSliderTextInput" to="." method="_on_height_slider_text_input_text_submitted"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HeightSlider" to="." method="_on_height_slider_value_changed"]
